# pytorch_fastapi_application

./: .gitignore  README.md  load.js
mlapi/: Dockerfile  pyproject.toml  submission-namespace.yaml
mlapi/.k8s/base/: deployment-redis.yaml  deployment.yaml  kustomization.yaml  service-redis.yaml  service.yaml
mlapi/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml  service-lab4-lb.yaml
mlapi/.k8s/overlays/prod/: hpa-api-project.yaml  hpa-api.yaml  kustomization.yaml  virtual-service.yaml
mlapi/src/: main.py  model_testing.py  sentiment_predict.py
mlapi/tests/: test_mlapi.py
mlapi/trainer/: train.py
